# corvus

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  mise.toml  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/skills/: obsidian.md
.forgejo/workflows/: renovate.yml
.github/workflows/: ci.yaml
archive/mcp_servers_legacy/: gmail_server.py
config/: acp_agents.yaml  capabilities.yaml  litellm_config.yaml  models.yaml  policy.yaml  schedules.yaml  task_routing.yaml
config.example/: acp_agents.yaml  capabilities.yaml  memory.yaml  models.yaml  schedules.yaml  task_routing.yaml
config.example/agents/: general.yaml  homelab-codex.yaml
config/agents/: docs.yaml  email.yaml  finance.yaml  general.yaml  home.yaml  homelab.yaml  huginn.yaml  music.yaml  personal.yaml  work.yaml
corvus/: Dockerfile  auth.py  break_glass.py  client_pool.py  config.py  credential_store.py  events.py  google_client.py  hooks.py  kimi_bridge.py  kimi_proxy.py  litellm_manager.py  logging.py  model_router.py  ollama_probe.py  permissions.py  router.py  sanitize.py  scheduler.py  server.py  session.py  session_manager.py  supervisor.py  webhooks.py  yahoo_client.py
corvus/acp/: __init__.py  client.py  events.py  file_gate.py  permission_map.py  registry.py  sandbox.py  session.py  terminal_gate.py
corvus/agents/: __init__.py  hub.py  registry.py  service.py  spec.py
corvus/api/: __init__.py  agents.py  chat.py  control.py  memory.py  models.py  schedules.py  sessions.py  traces.py  webhooks.py
corvus/auth/: __init__.py  health_monitor.py  openai_oauth.py  profile_health.py  profile_resolver.py  profiles.py
corvus/capabilities/: __init__.py  config.py  modules.py  registry.py
corvus/cli/: __init__.py  chat.py  chat_confirm.py  chat_render.py  compose_claude_md.py  compose_system_prompt.py  mcp_bridge.py  mcp_config.py  mcp_stdio.py  setup.py  tool_registry.py  tool_server.py  tool_token.py  workspace.py
corvus/gateway/: __init__.py  acp_executor.py  background_dispatch.py  chat_engine.py  chat_session.py  confirm_queue.py  control_plane.py  dispatch_metrics.py  dispatch_orchestrator.py  dispatch_runtime.py  options.py  protocol.py  run_executor.py  runtime.py  sdk_client_manager.py  session_emitter.py  stream_processor.py  task_planner.py  trace_hub.py  workspace_runtime.py
corvus/tools/: ha.py  (+7 more)
frontend/: .dockerignore  Dockerfile  FUNDAMENTALS.md  nginx.conf  package-lock.json  package.json  playwright.config.ts  playwright.live.config.ts  pnpm-lock.yaml  vite.config.ts
mcp_servers/: ha_server.py
scripts/: finance.py  inbox.py  migrate_memory_schema.py  obsidian.py  paperless.py  reindex.py  rename_claw_to_corvus.py  test_acp_handshake.py  test_acp_live.py  test_acp_prompt.py  test_acp_session.py  test_kimi_bridge.py  test_kimi_bridge_module.py  test_kimi_call.py
tests/: conftest.py
(+718 files in other folders)
